--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <script src="assets/bootstrap/js/popper.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
+  <link rel="stylesheet" href="assets/css/kitties_style.css">
   <link rel="stylesheet" href="assets/css/mystyle.css">
   <link rel="stylesheet" href="assets/css/cats.css">
   <link rel="stylesheet" href="assets/css/colors.css">
@@ -22,57 +23,72 @@
     </div>
         <div class="row">
             <div class="col-lg-4 catBox m-2 light-b-shadow">
-                <div class="cat">
-                    <div class="cat__ear">
-                        <div id="leftEar" class="cat__ear--left">
-                            <div class="cat__ear--left-inside"></div>
+              <div class="cat">
+                    <div class="tail-end">
+
+                    </div>
+                    <div class="tail">J</div>
+                    <div class="ears">
+                        <div class="ear" id="left-ear">
+                            <div class="inner-Ear" id="inner-left-ear"></div>
                         </div>
-                        <div id="rightEar" class="cat__ear--right">
-                            <div class="cat__ear--right-inside"></div>
+                        <div class="ear" id="right-ear">
+                            <div class="inner-Ear" id="inner-right-ear"></div>
                         </div>
                     </div>
 
-                    <div id="head" class="cat__head">
-                        <div id="midDot" class="cat__head-dots">
-                            <div id="leftDot" class="cat__head-dots_first"></div>
-                            <div id="rightDot" class="cat__head-dots_second"></div>
-                        </div>
-                        <div class="cat__eye">
-                            <div class="cat__eye--left">
-                                <span class="pupil-left"></span>
+                    <div id="body">
+                        <div class="tummy"></div>
+
+                        <div class="back-legs">
+                            <div class="back-leg-left">
+                                <div class="paws-back-left"></div>
                             </div>
-                            <div class="cat__eye--right">
-                                <span class="pupil-right"></span>
+                            <div class="back-leg-right">
+                                <div class="paws-back-right"></div>
                             </div>
                         </div>
-                        <div class="cat__nose"></div>
 
-                        <div class="cat__mouth-contour"></div>
-                        <div class="cat__mouth-left"></div>
-                        <div class="cat__mouth-right"></div>
-
-                        <div class="cat__whiskers-left"></div>
-                        <div class="cat__whiskers-right"></div>
+                        <div class="front-legs">
+                            <div class="front-leg">
+                                <div class="paws"></div>
+                            </div>
+                            <div class="front-leg">
+                                <div class="paws"></div>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="cat__body">
+                    <div id="head">
+                        <div class="eyes">
+                            <div class="eye">
+                                <div class="left-Eye">
+                                    <div class="pupils"></div>
+                                </div>
+                            </div>
+                            <div class="eye">
+                                <div class="right-Eye">
+                                    <div class="pupils"></div>
+                                </div>
+                            </div>
+                        </div>
 
-                        <div class="cat__chest"></div>
+                        <div class="mouth">
+                            <div class="jaw"></div>
+                            <div class="lips">
+                                <div class="left-wiskers">\\\</div>
+                            </div>
+                            <div class="lips">
+                                <div class="right-wiskers">///</div>
+                            </div>
+                        </div>
 
-                        <div class="cat__chest_inner"></div>
-
-
-                        <div class="cat__paw-left"></div>
-                        <div class="cat__paw-left_inner"></div>
-
-
-                        <div class="cat__paw-right"></div>
-                        <div class="cat__paw-right_inner"></div>
-
-
-                        <div id="tail" class="cat__tail"></div>
+                        <div class="nose">
+                            <div class="left-nose"></div>
+                            <div class="right-nose"></div>
+                        </div>
                     </div>
-                </div>
+                  </div>
                 <br>
                 <div class="dnaDiv" id="catDNA">
                     <b>
@@ -82,7 +98,7 @@
                          <span id="dnamouth"></span>
                          <span id="dnaeyes"></span>
                          <span id="dnaears"></span>
-                        
+
                          <!-- Cattributes -->
                          <span id="dnashape"></span>
                          <span id="dnadecoration"></span>
