--- a/client/index.html
+++ b/client/index.html
@@ -76,10 +76,10 @@
                         <div class="mouth">
                             <div class="jaw"></div>
                             <div class="lips">
-                                <div class="left-wiskers">\\\</div>
+                                <div class="whiskers" id="right-whisker">///</div>
                             </div>
                             <div class="lips">
-                                <div class="right-wiskers">///</div>
+                                <div class="whiskers" id="left-whisker">///</div>
                             </div>
                         </div>
 
