--- a/client/index.html
+++ b/client/index.html
@@ -114,8 +114,33 @@
 <!-- Cat colors -->
 <div id="catColors">
                 <div class="form-group">
-                    <label for="formControlRange"><b>Head and body</b><span class="badge badge-dark ml-2" id="headcode"></span></label>
+                    <label for="formControlRange"><b>Head and Body</b><span class="badge badge-dark ml-2" id="headcode"></span></label>
                     <input type="range" min="10" max="98" class="form-control-range" id="bodycolor">
+                </div>
+
+                <div class="form-group">
+                    <label for="formControlRange"><b>Legs and Tail</b><span class="badge badge-dark ml-2" id="legscode"></span></label>
+                    <input type="range" min="10" max="98" class="form-control-range" id="tailcolor">
+                </div>
+
+                <div class="form-group">
+                    <label for="formControlRange"><b>Eyes</b><span class="badge badge-dark ml-2" id="eyescode"></span></label>
+                    <input type="range" min="10" max="98" class="form-control-range" id="eyes_color">
+                </div>
+
+                <div class="form-group">
+                    <label for="formControlRange"><b>Ears</b><span class="badge badge-dark ml-2" id="earscode"></span></label>
+                    <input type="range" min="10" max="98" class="form-control-range" id="ears_color">
+                </div>
+
+                <div class="form-group">
+                    <label for="formControlRange"><b>Inner Ears, Paws and Tailtip</b><span class="badge badge-dark ml-2" id="pawscode"></span></label>
+                    <input type="range" min="10" max="98" class="form-control-range" id="paws_color">
+                </div>
+
+                <div class="form-group">
+                    <label for="formControlRange"><b>Belly and Mouth</b><span class="badge badge-dark ml-2" id="bellycode"></span></label>
+                    <input type="range" min="10" max="98" class="form-control-range" id="belly_color">
                 </div>
             </div>
 
