--- a/client/index.html
+++ b/client/index.html
@@ -95,9 +95,11 @@
                         DNA:
                         <!-- Colors -->
                          <span id="dnabody"></span>
-                         <span id="dnamouth"></span>
+                         <span id="dnalegs"></span>
                          <span id="dnaeyes"></span>
                          <span id="dnaears"></span>
+                         <span id="dnapaws"></span>
+                         <span id="dnabelly"></span>
 
                          <!-- Cattributes -->
                          <span id="dnashape"></span>
