--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <script src="assets/bootstrap/js/popper.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
+  <link rel="stylesheet" href="assets/css/animations.css">
   <link rel="stylesheet" href="assets/css/kitties_style.css">
   <link rel="stylesheet" href="assets/css/mystyle.css">
   <link rel="stylesheet" href="assets/css/cats.css">
@@ -112,8 +113,8 @@
                          <!-- Cattributes -->
                          <span id="dnashape"></span>
                          <span id="dnadecoration"></span>
-                         <span id="dnadecorationMid"></span>
-                         <span id="dnadecorationSides"></span>
+                         <span id="dnadecorationTop"></span>
+                         <span id="dnadecorationBottom"></span>
                          <span id="dnadanimation"></span>
                          <span id="dnaspecial"></span>
                     </b>
@@ -171,6 +172,11 @@
                 <div class="form-group">
                     <label for="formControlRange"><b>Bottom Stripe Color</b><span class="badge badge-dark ml-2" id="bottomcode"></span></label>
                     <input type="range" min="10" max="98" class="form-control-range" id="stripe_bottom_color">
+                </div>
+
+                <div class="form-group">
+                    <label for="formControlRange"><b>Animation</b><span class="badge badge-dark ml-2" id="animationName"></span></label>
+                    <input type="range" min="1" max="6" class="form-control-range" id="animation">
                 </div>
             </div>
 
