--- a/client/index.html
+++ b/client/index.html
@@ -25,20 +25,22 @@
         <div class="row">
             <div class="col-lg-4 catBox m-2 light-b-shadow">
               <div class="cat">
-                    <div class="tail-end">
 
-                    </div>
-                    <div class="tail">J</div>
-                    <div class="ears">
+
+              <div class="tail-end"></div>
+              <div class="tail">J</div>
+
+
+                <div class="ears earupdown">
                         <div class="ear" id="left-ear">
                             <div class="inner-Ear" id="inner-left-ear"></div>
                         </div>
                         <div class="ear" id="right-ear">
                             <div class="inner-Ear" id="inner-right-ear"></div>
                         </div>
-                    </div>
+                </div>
 
-                    <div id="body">
+                <div id="body">
                         <div class="tummy"></div>
 
                         <div class="back-legs">
@@ -58,9 +60,9 @@
                                 <div class="paws"></div>
                             </div>
                         </div>
-                    </div>
+                  </div>
 
-                    <div id="head">
+                  <div id="head">
                       <div class="stripes">
                         <div class="stripes-top-left">~</div>
                         <div class="stripes-top-right">~</div>
@@ -69,14 +71,14 @@
                       </div>
                         <div class="eyes">
                             <div class="eye">
-                                <div class="left-Eye">
-                                    <div class="pupils"></div>
+                                <div class="left-Eye eyesmoving">
+                                    <div class="pupils pupilsmoving"></div>
                                     <div class="eye-borders-left"></div>
                                 </div>
                             </div>
                             <div class="eye">
-                                <div class="right-Eye">
-                                    <div class="pupils"></div>
+                                <div class="right-Eye eyesmoving">
+                                    <div class="pupils pupilsmoving"></div>
                                     <div class="eye-borders-right"></div>
                                 </div>
                             </div>
@@ -115,7 +117,7 @@
                          <span id="dnadecoration"></span>
                          <span id="dnadecorationTop"></span>
                          <span id="dnadecorationBottom"></span>
-                         <span id="dnadanimation"></span>
+                         <span id="dnaanimation"></span>
                          <span id="dnaspecial"></span>
                     </b>
                 </div>
@@ -135,9 +137,18 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="formControlRange"><b>Eyes</b><span class="badge badge-dark ml-2" id="eyescode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="eyes_color">
-                </div>
+                  <div class="row">
+                    <div class="col">
+                          <label for="formControlRange"><b>Eyes</b><span class="badge badge-dark ml-2" id="eyescode"></span></label>
+                          <input type="range" min="10" max="98" class="form-control-range" id="eyes_color">
+                      </div>
+
+                      <div class="col">
+                          <label for="formControlRange"><b>Eye Shape</b><span class="badge badge-dark ml-2" id="eyeName"></span></label>
+                          <input type="range" min="1" max="9" class="form-control-range" id="eyeshape">
+                      </div>
+                    </div>
+                  </div>
 
                 <div class="form-group">
                     <label for="formControlRange"><b>Ears</b><span class="badge badge-dark ml-2" id="earscode"></span></label>
@@ -155,25 +166,22 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="formControlRange"><b>Eye Shape</b><span class="badge badge-dark ml-2" id="eyeName"></span></label>
-                    <input type="range" min="1" max="9" class="form-control-range" id="eyeshape">
-                </div>
-
-                <div class="form-group">
                     <label for="formControlRange"><b>Stripes</b><span class="badge badge-dark ml-2" id="stripeName"></span></label>
                     <input type="range" min="1" max="9" class="form-control-range" id="stripeshape">
                 </div>
 
                 <div class="form-group">
-                    <label for="formControlRange"><b>Top Stripe Color</b><span class="badge badge-dark ml-2" id="topcode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="stripe_top_color">
-                </div>
+                  <div class="row">
+                    <div class="col">
+                          <label for="formControlRange"><b>Top Stripe Color</b><span class="badge badge-dark ml-2" id="topcode"></span></label>
+                          <input type="range" min="10" max="98" class="form-control-range" id="stripe_top_color">
+                      </div>
 
-                <div class="form-group">
-                    <label for="formControlRange"><b>Bottom Stripe Color</b><span class="badge badge-dark ml-2" id="bottomcode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="stripe_bottom_color">
-                </div>
-
+                      <div class="col">
+                          <label for="formControlRange"><b>Bottom Stripe Color</b><span class="badge badge-dark ml-2" id="bottomcode"></span></label>
+                          <input type="range" min="10" max="98" class="form-control-range" id="stripe_bottom_color">
+                      </div>
+                    </div>
                 <div class="form-group">
                     <label for="formControlRange"><b>Animation</b><span class="badge badge-dark ml-2" id="animationName"></span></label>
                     <input type="range" min="1" max="6" class="form-control-range" id="animation">
