--- a/client/index.html
+++ b/client/index.html
@@ -173,7 +173,12 @@
                 </div>
                 </div>
 
-                <div class="tab-pane fade show active" id="cattributesTab" role="tabpanel" aria-labelledby="cattributes-tab">
+                <div class="tab-pane" id="cattributesTab" role="tabpanel" aria-labelledby="cattributes-tab">
+
+                <div class="form-group">
+                    <label for="formControlRange"><b>Stripes</b><span class="badge badge-dark ml-2" id="stripeName"></span></label>
+                    <input type="range" min="1" max="9" class="form-control-range" id="stripeshape">
+                </div>
 
                 <div class="form-group">
                   <div class="row">
@@ -186,11 +191,6 @@
                           <label for="formControlRange"><b>Bottom Stripe Color</b><span class="badge badge-dark ml-2" id="bottomcode"></span></label>
                           <input type="range" min="10" max="98" class="form-control-range" id="stripe_bottom_color">
                       </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="formControlRange"><b>Stripes</b><span class="badge badge-dark ml-2" id="stripeName"></span></label>
-                        <input type="range" min="1" max="9" class="form-control-range" id="stripeshape">
                     </div>
 
                     <div class="form-group">
