--- a/client/index.html
+++ b/client/index.html
@@ -211,6 +211,13 @@
         </div>
         </div>
     </div>
+
+    <button type="button" class="btn btn-outline-primary" id="defaultButton">Default Kittie</button>
+    <button type="button" class="btn btn-outline-secondary" id="randomButton">Random Kittie</button>
+    <button type="button" class="btn btn-outline-success" id="createButton">Create Kittie</button>
+    <br>
+    <br>
+
     <footer align="left">
         <p>Ivan on Tech Academy Bootcamp July 2020</p>
     </footer>
