--- a/client/index.html
+++ b/client/index.html
@@ -181,27 +181,24 @@
                 </div>
 
                 <div class="form-group">
-                  <div class="row">
-                    <div class="col">
-                          <label for="formControlRange"><b>Top Stripe Color</b><span class="badge badge-dark ml-2" id="topcode"></span></label>
-                          <input type="range" min="10" max="98" class="form-control-range" id="stripe_top_color">
-                      </div>
+                    <label for="formControlRange"><b>Top Stripe Color</b><span class="badge badge-dark ml-2" id="topcode"></span></label>
+                    <input type="range" min="10" max="98" class="form-control-range" id="stripe_top_color">
+                </div>
 
-                      <div class="col">
-                          <label for="formControlRange"><b>Bottom Stripe Color</b><span class="badge badge-dark ml-2" id="bottomcode"></span></label>
-                          <input type="range" min="10" max="98" class="form-control-range" id="stripe_bottom_color">
-                      </div>
-                    </div>
+                <div class="form-group">
+                    <label for="formControlRange"><b>Bottom Stripe Color</b><span class="badge badge-dark ml-2" id="bottomcode"></span></label>
+                    <input type="range" min="10" max="98" class="form-control-range" id="stripe_bottom_color">
+                </div>
 
-                    <div class="form-group">
-                        <label for="formControlRange"><b>Eye Shape</b><span class="badge badge-dark ml-2" id="eyeName"></span></label>
-                        <input type="range" min="1" max="9" class="form-control-range" id="eyeshape">
-                    </div>
+                <div class="form-group">
+                    <label for="formControlRange"><b>Eye Shape</b><span class="badge badge-dark ml-2" id="eyeName"></span></label>
+                    <input type="range" min="1" max="9" class="form-control-range" id="eyeshape">
+                </div>
 
-                    <div class="form-group">
-                        <label for="formControlRange"><b>Animation</b><span class="badge badge-dark ml-2" id="animationName"></span></label>
-                        <input type="range" min="1" max="6" class="form-control-range" id="animation">
-                    </div>
+                <div class="form-group">
+                    <label for="formControlRange"><b>Animation</b><span class="badge badge-dark ml-2" id="animationName"></span></label>
+                    <input type="range" min="1" max="6" class="form-control-range" id="animation">
+                </div>
             </div>
 
             </div>
@@ -212,11 +209,9 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-outline-primary" id="defaultButton">Default Kittie</button>
-    <button type="button" class="btn btn-outline-secondary" id="randomButton">Random Kittie</button>
-    <button type="button" class="btn btn-outline-success" id="createButton">Create Kittie</button>
-    <br>
-    <br>
+    <button type="button" class="btn btn-primary" id="defaultButton">Default Kitty</button>
+    <button type="button" class="btn btn-info" id="randomButton">Random Kitty</button>
+    <button type="button" class="btn btn-success" id="createButton">Create Kitty</button>
 
     <footer align="left">
         <p>Ivan on Tech Academy Bootcamp July 2020</p>
