added page two, logic developing

--- a/client/index.html
+++ b/client/index.html
@@ -19,12 +19,54 @@
   <link rel="stylesheet" href="assets/css/factory.css">
   <link rel="stylesheet" href="assets/css/frontend.css">
 </head>
-  <body>
-    <div class="container p-5" style="margin-top: 12vh;margin-bottom: 10vh;">
+
+
+<body>
+
+<!--NavBar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Cyber Kitties</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index-page-2.html" id="myKitties">My Kitties</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Code
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/contracts" target="_blank">Solidity</a>
+            <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/client/assets/js" target="_blank">Javascript</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="https://github.com/mjwatson10" target="_blank">Main GitHub Repo</a>
+          </div>
+        </li>
+      </ul>
+      <!-- <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form> -->
+    </div>
+  </nav>
+
+
+<!--Title Text-->
+    <div class="container p-5" style="margin-top: -1vh;margin-bottom: 10vh;">
         <div align="center">
         <h1 class="c-white">Kitties-Factory</h1>
         <p class="c-white">Create your custom Kitty</p>
     </div>
+
+
+<!--Kitties-->
         <div class="row">
             <div class="col-lg-4 catBox m-2 light-b-shadow">
               <div class="cat">
