--- a/client/index-page-2.html
+++ b/client/index-page-2.html
@@ -9,6 +9,7 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/js/web3.min.js"></script>
   <script src="./abi.js"></script>
+  <script src="./main.js"></script>
 
 
   <link rel="stylesheet" href="assets/css/animations.css">
@@ -67,7 +68,7 @@
 
 
     <!--Kitties-->
-    
+
 
 
     <footer align="left">
@@ -75,7 +76,7 @@
     </footer>
 
   </body>
-  <script src="./index.js"></script>
+  <script src="./displayKitties.js"></script>
   <script src="assets/js/colors.js"></script>
   <script src="assets/js/catSettings.js"></script>
   <script src="assets/js/catFactory.js"></script>
