--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/js/web3.min.js"></script>
   <script src="./abi.js"></script>
+  <script src="./main.js"></script>
 
 
   <link rel="stylesheet" href="assets/css/animations.css">
