--- a/client/index-page-2.html
+++ b/client/index-page-2.html
@@ -26,7 +26,7 @@
 
 <!--NavBar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Cyber Kitties</a>
+    <a class="navbar-brand" href="index.html">Cyber Kitties</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -68,6 +68,8 @@
 
 
     <!--Kitties-->
+
+    <button type="button" id="loadKitties">Load Kitties</button>
 
 
 
