display kitties function

--- a/client/index-page-2.html
+++ b/client/index-page-2.html
@@ -71,6 +71,14 @@
 
     <button type="button" id="loadKitties">Load Kitties</button>
 
+    <div class="container">
+
+      <div class="col-sm" id = "myOwnedKitties">
+
+      </div>
+
+    </div>
+
 
 
     <footer align="left">
