added cards to my kitties

--- a/client/index-page-2.html
+++ b/client/index-page-2.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Academy kitties </title>
+  <title>Academy Kitties</title>
   <script type="text/javascript" src="assets/js/jquery-3.4.1.js"></script>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <script src="assets/bootstrap/js/popper.js"></script>
@@ -62,8 +62,8 @@
 <!--Title Text-->
     <div class="container p-5" style="margin-top: -1vh;margin-bottom: 10vh;">
         <div align="center">
-        <h1 class="c-white">Kitties-Factory</h1>
-        <p class="c-white">Create your custom Kitty</p>
+        <h1 class="c-white">My Kitties</h1>
+        <p class="c-white">These are all your "beautiful" kitties</p>
     </div>
 
 
@@ -71,13 +71,10 @@
 
     <button type="button" id="loadKitties">Load Kitties</button>
 
-    <div class="container">
 
-      <div class="col-sm" id = "myOwnedKitties">
-
+      <div class="container">
+        <div class="col-sm flexBox" id = "myOwnedKitties"></div>
       </div>
-
-    </div>
 
 
 
