--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Academy kitties </title>
+  <title>Academy Kitties</title>
   <script type="text/javascript" src="assets/js/jquery-3.4.1.js"></script>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <script src="assets/bootstrap/js/popper.js"></script>
@@ -62,7 +62,7 @@
 <!--Title Text-->
     <div class="container p-5" style="margin-top: -1vh;margin-bottom: 10vh;">
         <div align="center">
-        <h1 class="c-white">Kitties-Factory</h1>
+        <h1 class="c-white">Kitties Factory</h1>
         <p class="c-white">Create your custom Kitty</p>
     </div>
 
