--- a/client/index-page-2.html
+++ b/client/index-page-2.html
@@ -83,6 +83,6 @@
   <script src="assets/js/colors.js"></script>
   <script src="assets/js/catSettings.js"></script>
   <script src="assets/js/catFactory.js"></script>
-  <script src="./displayKitties.js"></script>
+  <script src="assets/js/displayKitties.js"></script>
 
 </html>
