--- a/client/index.html
+++ b/client/index.html
@@ -1,275 +1,77 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Academy Kitties</title>
-  <script type="text/javascript" src="assets/js/jquery-3.4.1.js"></script>
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <script src="assets/bootstrap/js/popper.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/web3.min.js"></script>
-  <script src="./abi.js"></script>
-  <script src="./main.js"></script>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Academy Kitties/Home</title>
+    <script type="text/javascript" src="assets/js/jquery-3.4.1.js"></script>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <script src="assets/bootstrap/js/popper.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/web3.min.js"></script>
+    <script src="./abi.js"></script>
+    <script src="./main.js"></script>
 
 
-  <link rel="stylesheet" href="assets/css/animations.css">
-  <link rel="stylesheet" href="assets/css/kitties_style.css">
-  <link rel="stylesheet" href="assets/css/mystyle.css">
-  <link rel="stylesheet" href="assets/css/cats.css">
-  <link rel="stylesheet" href="assets/css/colors.css">
-  <link rel="stylesheet" href="assets/css/factory.css">
-  <link rel="stylesheet" href="assets/css/frontend.css">
-</head>
+    <link rel="stylesheet" href="assets/css/animations.css">
+    <link rel="stylesheet" href="assets/css/kitties_style.css">
+    <link rel="stylesheet" href="assets/css/mystyle.css">
+    <link rel="stylesheet" href="assets/css/cats.css">
+    <link rel="stylesheet" href="assets/css/colors.css">
+    <link rel="stylesheet" href="assets/css/factory.css">
+    <link rel="stylesheet" href="assets/css/frontend.css">
+    <link rel="stylesheet" href="assets/css/page.css">
+  </head>
 
 
-<body>
+  <body>
+    <!--NavBar-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand nav-head" href="index.html"><span id="cyber-font-header">Cyber </span><span id="kitty-font">Kitties</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-<!--NavBar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">Cyber Kitties</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index-page-2.html" id="myKitties">My Kitties</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Code
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/contracts" target="_blank">Solidity</a>
-            <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/client/assets/js" target="_blank">Javascript</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="https://github.com/mjwatson10" target="_blank">Main GitHub Repo</a>
-          </div>
-        </li>
-      </ul>
-      <!-- <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form> -->
-    </div>
-  </nav>
-
-
-<!--Title Text-->
-    <div class="container p-5" style="margin-top: -1vh;margin-bottom: 10vh;">
-        <div align="center">
-        <h1 class="c-white">Kitties Factory</h1>
-        <p class="c-white">Create your custom Kitty</p>
-    </div>
-
-
-<!--Kitties-->
-        <div class="row">
-            <div class="col-lg-4 catBox m-2 light-b-shadow">
-              <div class="cat">
-
-
-              <div class="tail-end"></div>
-              <div class="tail">J</div>
-
-
-                <div class="ears earupdown">
-                        <div class="ear" id="left-ear">
-                            <div class="inner-Ear" id="inner-left-ear"></div>
-                        </div>
-                        <div class="ear" id="right-ear">
-                            <div class="inner-Ear" id="inner-right-ear"></div>
-                        </div>
-                </div>
-
-                <div id="body">
-                        <div class="tummy"></div>
-
-                        <div class="back-legs">
-                            <div class="back-leg-left">
-                                <div class="paws-back-left"></div>
-                            </div>
-                            <div class="back-leg-right">
-                                <div class="paws-back-right"></div>
-                            </div>
-                        </div>
-
-                        <div class="front-legs">
-                            <div class="front-leg">
-                                <div class="paws"></div>
-                            </div>
-                            <div class="front-leg">
-                                <div class="paws"></div>
-                            </div>
-                        </div>
-                  </div>
-
-                  <div id="head">
-                      <div class="stripes">
-                        <div class="stripes-top-left">~</div>
-                        <div class="stripes-top-right">~</div>
-                        <div class="stripes-bottom-left">~</div>
-                        <div class="stripes-bottom-right">~</div>
-                      </div>
-                        <div class="eyes">
-                            <div class="eye">
-                                <div class="left-Eye eyesmoving">
-                                    <div class="pupils pupilsmoving"></div>
-                                    <div class="eye-borders-left"></div>
-                                </div>
-                            </div>
-                            <div class="eye">
-                                <div class="right-Eye eyesmoving">
-                                    <div class="pupils pupilsmoving"></div>
-                                    <div class="eye-borders-right"></div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="mouth">
-                            <div class="jaw"></div>
-                            <div class="lips">
-                                <div class="whiskers" id="right-whisker">///</div>
-                            </div>
-                            <div class="lips">
-                                <div class="whiskers" id="left-whisker">///</div>
-                            </div>
-                        </div>
-
-                        <div class="nose">
-                            <div class="left-nose"></div>
-                            <div class="right-nose"></div>
-                        </div>
-                    </div>
-                  </div>
-                <br>
-                <div class="dnaDiv" id="catDNA">
-                    <b>
-                        DNA:
-                        <!-- Colors -->
-                         <span id="dnabody"></span>
-                         <span id="dnalegs"></span>
-                         <span id="dnaeyes"></span>
-                         <span id="dnaears"></span>
-                         <span id="dnapaws"></span>
-                         <span id="dnabelly"></span>
-
-                         <!-- Cattributes -->
-                         <span id="dnashape"></span>
-                         <span id="dnadecoration"></span>
-                         <span id="dnadecorationTop"></span>
-                         <span id="dnadecorationBottom"></span>
-                         <span id="dnaanimation"></span>
-                         <span id="dnaspecial"></span>
-                    </b>
-                </div>
-            </div>
-            <div class="col-lg-7 cattributes m-2 light-b-shadow">
-
-<!-- Cat colors -->
-<div class="row">
-
-  <div class="col-sm-11" id="navBar">
-
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <a class="nav-link active" data-toggle="tab" href="#colorsTab" role="tab" aria-controls="colors" aria-selected="true">Cat Colors</a>
-          </li>
-          <li class="nav-item" role="presentation">
-            <a class="nav-link" id="exchange-tab" data-toggle="tab" href="#cattributesTab" role="tab" aria-controls="cattributes" aria-selected="false">Cattributes</a>
-          </li>
-        </ul>
-        <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="colorsTab" role="tabpanel" aria-labelledby="color-tab">
-
-              <div id="catColors">
-                <div class="form-group">
-                    <label for="formControlRange"><b>Head and Body</b><span class="badge badge-dark ml-2" id="headcode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="bodycolor">
-                </div>
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Legs and Tail</b><span class="badge badge-dark ml-2" id="legscode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="tailcolor">
-                </div>
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Eyes</b><span class="badge badge-dark ml-2" id="eyescode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="eyes_color">
-                </div>
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Ears</b><span class="badge badge-dark ml-2" id="earscode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="ears_color">
-                </div>
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Inner Ears, Paws and Tailtip</b><span class="badge badge-dark ml-2" id="pawscode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="paws_color">
-                </div>
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Belly and Mouth</b><span class="badge badge-dark ml-2" id="bellycode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="belly_color">
-                </div>
-                </div>
-                </div>
-
-                <div class="tab-pane" id="cattributesTab" role="tabpanel" aria-labelledby="cattributes-tab">
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Stripes</b><span class="badge badge-dark ml-2" id="stripeName"></span></label>
-                    <input type="range" min="1" max="9" class="form-control-range" id="stripeshape">
-                </div>
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Top Stripe Color</b><span class="badge badge-dark ml-2" id="topcode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="stripe_top_color">
-                </div>
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Bottom Stripe Color</b><span class="badge badge-dark ml-2" id="bottomcode"></span></label>
-                    <input type="range" min="10" max="98" class="form-control-range" id="stripe_bottom_color">
-                </div>
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Eye Shape</b><span class="badge badge-dark ml-2" id="eyeName"></span></label>
-                    <input type="range" min="1" max="9" class="form-control-range" id="eyeshape">
-                </div>
-
-                <div class="form-group">
-                    <label for="formControlRange"><b>Animation</b><span class="badge badge-dark ml-2" id="animationName"></span></label>
-                    <input type="range" min="1" max="6" class="form-control-range" id="animation">
-                </div>
-            </div>
-
-            </div>
-
-            <br>
-
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html"><span id="cyber-font-header">Home</span><span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-header">Factory</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span id="cyber-font-header">Code</span>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/contracts" target="_blank"><span id="cyber-font-header">Solidity</span></a>
+                <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/client/assets/js" target="_blank"><span id="cyber-font-header">Javascript</span></a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="https://github.com/mjwatson10" target="_blank"><span id="cyber-font-header">Main GitHub Repo</span></a>
+              </div>
+            </li>
+          </ul>
         </div>
-        </div>
+      </nav>
+
+  <div class="row">
+
+    <div class="col-sm-12" id="top-cell">
+      <h1 id="cyber-font">
+        Cyber <span id="kitty-font">Kitties</span>
+      </h1>
+
     </div>
 
-    <button type="button" class="btn btn-primary" id="defaultButton">Default Kitty</button>
-    <button type="button" class="btn btn-info" id="randomButton">Random Kitty</button>
-    <button type="button" class="btn btn-success" id="createButton">Create Kitty</button>
+  </div>
 
-
-    <div class="alert alert-success" role="alert" id="kittyCreation" style="display:none">
-
-    </div>
-
-
-    <footer align="left">
-        <p>Ivan on Tech Academy Bootcamp July 2020</p>
-    </footer>
 
   </body>
+
   <script src="./index.js"></script>
   <script src="assets/js/colors.js"></script>
   <script src="assets/js/catSettings.js"></script>
