--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <!--NavBar-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light" id="navigation">
         <a class="navbar-brand nav-head" href="index.html"><span id="cyber-font-header">Cyber </span><span id="kitty-font">Kitties</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -59,14 +59,22 @@
       </nav>
 
   <div class="row">
-
     <div class="col-sm-12" id="top-cell">
-      <h1 id="cyber-font">
+      <h1 id="cyber-font-home">
         Cyber <span id="kitty-font">Kitties</span>
       </h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12" id="middle-cell">
+      <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id est laborum.</h2>
 
     </div>
-
   </div>
 
 
