--- a/client/Factory.html
+++ b/client/Factory.html
@@ -26,37 +26,41 @@
 <body>
 
 <!--NavBar-->
-<nav class="navbar navbar-expand-lg navbar-light" id="navigation">
-  <a class="navbar-brand nav-head" href="index.html"><span id="cyber-font-header">Cyber </span><span id="kitty-font">Kitties</span></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<div class="col-sm-12">
+<a class="navbar-brand nav-head" href="index.html"><span id="cyber-font-header">Cyber </span><span id="kitty-font-header">Kitties</span></a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+</div>
+</header>
+<!--NavBar-->
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light" id="navigation">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html"><span id="cyber-font-header">Home</span><span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-header">Factory</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span id="cyber-font-header">Code</span>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/contracts" target="_blank"><span id="cyber-font-header">Solidity</span></a>
-          <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/client/assets/js" target="_blank"><span id="cyber-font-header">Javascript</span></a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="https://github.com/mjwatson10" target="_blank"><span id="cyber-font-header">Main GitHub Repo</span></a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html"><span id="cyber-font-nav">Home</span><span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-nav">Factory</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span id="cyber-font-nav">Code</span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/contracts" target="_blank"><span id="cyber-font-header">Solidity</span></a>
+            <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/client/assets/js" target="_blank"><span id="cyber-font-header">Javascript</span></a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="https://github.com/mjwatson10" target="_blank"><span id="cyber-font-header">Main GitHub Repo</span></a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
 
