--- a/client/MyKitties.html
+++ b/client/MyKitties.html
@@ -60,7 +60,7 @@
 
 
 <!--Title Text-->
-    <div class="container p-5" style="margin-top: -1vh;margin-bottom: 10vh;">
+    <div class="container p-5">
         <div align="center">
         <h1 class="my-kitties-header">My Kitties</h1>
         <p class="my-kitties-header">These are all your <span id="beauty">"beautiful" </span>Kitties</p>
