--- a/client/MyKitties.html
+++ b/client/MyKitties.html
@@ -60,24 +60,29 @@
 
 
 <!--Title Text-->
-    <div class="container p-5">
+<div>
+    <div class="title">
         <div align="center">
-        <h1 class="my-kitties-header">My Kitties</h1>
-        <p class="my-kitties-header">These are all your <span id="beauty">"beautiful" </span>Kitties</p>
+        <p class="my-kitties-header">These are all your</p>
+          <p id="beauty">"beautiful" </p>
+          <p class="my-kitties-header">Kitties</p>
     </div>
+  </div>
 
 
     <!--Kitties-->
-      <div class="container">
+      <div class="my-kitties">
         <div class="col-sm-12 flexBox" id = "myOwnedKitties"></div>
       </div>
 
 
 
-
-    <footer align="left">
+<div class="footer">
+    <footer >
         <p>Ivan on Tech Academy Bootcamp July 2020</p>
     </footer>
+</div>
+
 
   </body>
   <script type="text/javascript" src="assets/js/jquery-3.4.1.js"></script>
