--- a/client/index.html
+++ b/client/index.html
@@ -25,13 +25,14 @@
 
 
   <body>
-    <div class="col-sm-12">
-    <a class="navbar-brand nav-head" href="index.html"><span id="cyber-font-header">Cyber </span><span id="kitty-font-header">Kitties</span></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </div>
-  </header>
+    <header>
+      <div class="col-sm-12">
+      <a class="navbar-brand nav-head" href="index.html"><span id="cyber-font-header">Cyber </span><span id="kitty-font-header">Kitties</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    </header>
     <!--NavBar-->
       <nav class="navbar sticky-top navbar-expand-lg navbar-light" id="navigation">
 
@@ -80,6 +81,9 @@
     </div>
   </div>
 
+  <footer class="footer">
+      <p>Ivan on Tech Academy Bootcamp July 2020</p>
+  </footer>
 
   </body>
 
