update dropdown navbar

--- a/client/MyKitties.html
+++ b/client/MyKitties.html
@@ -29,33 +29,33 @@
 </div>
 </header>
 <!--NavBar-->
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light" id="navigation">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light" id="navigation">
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html"><span id="cyber-font-nav">Home</span><span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-nav">Factory</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span id="cyber-font-nav">Code</span>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/contracts" target="_blank"><span id="cyber-font-header">Solidity</span></a>
-            <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/client/assets/js" target="_blank"><span id="cyber-font-header">Javascript</span></a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="https://github.com/mjwatson10" target="_blank"><span id="cyber-font-header">Main GitHub Repo</span></a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html"><span id="cyber-font-nav">Home</span><span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-nav">Factory</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span id="cyber-font-nav">Code</span>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/contracts" target="_blank"><span id="cyber-font-header">Solidity</span></a>
+          <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/client/assets/js" target="_blank"><span id="cyber-font-header">Javascript</span></a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="https://github.com/mjwatson10" target="_blank"><span id="cyber-font-header">Main GitHub Repo</span></a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 
 
