--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span id="cyber-font-nav">Code</span>
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/contracts" target="_blank"><span id="cyber-font-header">Solidity</span></a>
                 <a class="dropdown-item" href="https://github.com/mjwatson10/academy-kitties/tree/master/client/assets/js" target="_blank"><span id="cyber-font-header">Javascript</span></a>
                 <div class="dropdown-divider"></div>
