bootstrap modal added

--- a/client/Breed.html
+++ b/client/Breed.html
@@ -68,21 +68,42 @@
     </div>
 
     <!--Parent Kitties-->
-    <div class="col-sm-12 flexBox-breed">
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-xl">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Choose Parent</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body flexBox" id="parents"></div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-        <button class="dadKitty" id="dadId"></button>
-        <button class="momKitty" id="momId"></button>
+    <!--Modal Buttons-->
+    <div class="col-sm-12 flexBox-breed">
+        <button class="dadKitty" id="dadId" data-toggle="modal" data-target="#exampleModal"></button>
+        <button class="momKitty" id="momId" data-toggle="modal" data-target="#exampleModal"></button>
     </div>
 
 
-    <div class="bg-modal">
+  <!--  <div class="bg-modal">
       <div class="modal-content">
         <div class="close">&#10006;</div>
         <div class="my-breeders">
           <div class="col-sm-12 flexBox" id = "parents"></div>
-        </div>
+       </div>
       </div>
-    </div>
+    </div> -->
+
+
 
   </body>
 
