failed attempt to add breed function
breed function failed, added clear buttons

--- a/client/Breed.html
+++ b/client/Breed.html
@@ -79,6 +79,12 @@
         </button>
     </div>
 
+    <!-- Clear Buttons -->
+    <div class="col-sm-12 flexBox-breed">
+      <button type="button" id="clearDad" disabled="true">Remove Daddy</button>
+      <button type="button" id="clearMom" disabled="true">Remove Mommy</button>
+    </div>
+
     <!-- Modals -->
     <div class="modal fade" id="dadModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-xl modal-dialog-scrollable modal-dialog-centered">
@@ -128,19 +134,14 @@
       </div>
     </div>
 
+    <!-- Breed Button-->
+    <div class="col-sm-12 flexBox-breed">
+      <button type="button" id="breed">
+        <div class="Child">Breed</div>
+      </button>
+    </div>
 
-  <!--  <div class="bg-modal">
-      <div class="modal-content">
-        <div class="close">&#10006;</div>
-        <div class="my-breeders">
-          <div class="col-sm-12 flexBox" id = "parents"></div>
-       </div>
-      </div>
-    </div> -->
-
-
-
-  </body>
+    </body>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
