--- a/client/MyKitties.html
+++ b/client/MyKitties.html
@@ -66,9 +66,7 @@
 <div>
     <div class="title">
         <div align="center">
-        <p class="my-kitties-header">These are all your</p>
-          <p id="beauty">"beautiful" </p>
-          <p class="my-kitties-header">Kitties</p>
+        <p class="my-kitties-header">These are all your <span id="beauty">"beautiful" </span>Kitties</p>
     </div>
   </div>
 
