second failed attempt to breed kitties

--- a/client/Breed.html
+++ b/client/Breed.html
@@ -81,8 +81,12 @@
 
     <!-- Clear Buttons -->
     <div class="col-sm-12 flexBox-breed">
-      <button type="button" id="clearDad" disabled="true">Remove Daddy</button>
-      <button type="button" id="clearMom" disabled="true">Remove Mommy</button>
+      <button type="button" class="clearButton" id="clearDad" disabled="true">
+        <div class="clearText">Remove Daddy</div>
+      </button>
+      <button type="button" class="clearButton" id="clearMom" disabled="true">
+        <div class="clearText">Remove Mommy</div>
+      </button>
     </div>
 
     <!-- Modals -->
@@ -137,7 +141,7 @@
     <!-- Breed Button-->
     <div class="col-sm-12 flexBox-breed">
       <button type="button" id="breed">
-        <div class="Child">Breed</div>
+        <div class="child">Breed</div>
       </button>
     </div>
 
